# geekcamp-vol-16

./: .env.example  README.md  app.py  hello.py  middleware.py  pyproject.toml  requirements.txt
group_split/: prompt.py
main/: app.py  middleware.py
main/module/: .gitkeep  follow_up.py  group_split.py  recognition_main.py
main/static/: voice_recognition.css
main/templates/: follow_up.html  group_split.html  index.html  table.html  voice_recognition.html
masa/: news_sum.py  run.py  subject_provide.py  subject_sum.py
module/: follow_up.py  group_split.py  recognition_main.py
static/: follow_up.css  voice_recognition.css
templates/: follow_up.html  index.html  table.html  voice_recognition.html
wada_front/: main.py
web_sample/: app.py
web_sample/templates/: index.html
